--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.0.8",
     "firebase": "^10.1.0",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "tw-elements-react": "^1.0.0-alpha1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
